--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/PricingTemplate/PricingTemplateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/PricingTemplate/PricingTemplateManagement.html
@@ -1,9 +1,28 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-panel ng-controller="WhS_Sales_PricingTemplateManagementController">
+    <vr-form name="formFilter">
 
-</body>
-</html>
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row removeline>
+                <vr-columns width="normal">
+                    <vr-textbox value="scopeModel.name" label="Name"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+        </div>
+
+        <vr-row removeline>
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                <div transclude-to="buttons">
+                    <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.search"></vr-button>
+                    <vr-button type="Add" formname="formFilter" data-onclick="scopeModel.add" haspermission="scopeModel.hasAddPricingTemplatePermission"></vr-button>
+                </div>
+            </vr-actionbar>
+        </vr-row>
+
+        <vr-row>
+            <vr-columns width="fullrow" simplecol>
+                <vr-whs-sales-pricingtemplate-grid on-ready="scopeModel.onGridReady"></vr-whs-sales-pricingtemplate-grid>
+            </vr-columns>
+        </vr-row>
+
+    </vr-form>
+</vr-panel>
