Implementing rename zones from sale zone grid, remove rename from numbering plan, fix bugs when renaming zone by importing sheet
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43585

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleZone/SaleZoneEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleZone/SaleZoneEditor.html
@@ -1,1 +1,21 @@
-﻿
+﻿<div vr-modalcontent ng-controller="WhS_BE_SaleZoneEditorController" vr-loader="isGettingData" width="'30%'">
+    <vr-modalbody maxheight="'300px'">
+        <vr-form>
+            <div>
+                <vr-row removeline>
+                    <vr-columns width="1/2row">
+                        <vr-textbox value="name" label="Name" isrequired></vr-textbox>
+                    </vr-columns>
+                </vr-row>
+            </div>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Save" data-onclick="updateSaleZoneName"></vr-button>
+                <vr-button type="Close" data-onclick="close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
