--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/CompanySettings/CompanySettingsEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/CompanySettings/CompanySettingsEditor.html
@@ -1,41 +1,63 @@
 ﻿<div vr-modalcontent ng-controller="VRCommon_CompanySettingsEditorController" vr-loader="scopeModel.isLoading">
     <vr-modalbody>
         <vr-form name="formCompanySettingsEditor">
-            <vr-row removeline>
-                <vr-columns width="1/2row">
-                    <vr-textbox value="scopeModel.companyName" label="Company Name" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-textbox value="scopeModel.profileName" label="Profile Name" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-textbox value="scopeModel.registrationNumber" label="Registration Number" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-textarea value="scopeModel.registrationAddress" label="Registration Address" rows="2" isrequired="true"></vr-textarea>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-textbox value="scopeModel.vatId" label="Vat ID" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-switch value="scopeModel.isDefault" label="Default"></vr-switch>
-                </vr-columns>
-            </vr-row>
-            <vr-row removeline>
-                <vr-columns width="1/2row">
-                    <vr-fileupload extension="images" value="scopeModel.companyLogo" label="Company Logo" isrequired="true"> </vr-fileupload>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-preview-image height="80px" width="150px" value="scopeModel.companyLogo.fileId"> </vr-preview-image>
-                </vr-columns>
-            </vr-row>
-            <vr-row>
-                <vr-common-bank-detail-selector normal-col-num="6" on-ready="onBankDirectiveReady" ismultipleselection selectedvalues="bank" isrequired="true" showaddbutton></vr-common-bank-detail-selector>
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.companyName" label="Company Name" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.profileName" label="Profile Name" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.registrationNumber" label="Registration Number" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textarea value="scopeModel.registrationAddress" label="Registration Address" rows="2" isrequired="true"></vr-textarea>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.vatId" label="Vat ID" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-switch value="scopeModel.isDefault" label="Default"></vr-switch>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-fileupload extension="images" value="scopeModel.companyLogo" label="Company Logo" isrequired="true"> </vr-fileupload>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-preview-image height="80px" width="150px" value="scopeModel.companyLogo.fileId"> </vr-preview-image>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row>
+                        <vr-common-bank-detail-selector normal-col-num="6" on-ready="onBankDirectiveReady" ismultipleselection selectedvalues="bank" isrequired="true" showaddbutton></vr-common-bank-detail-selector>
 
-                <vr-columns width="1/2row">
-                    <vr-textbox-multiple value="scopeModel.toMail" datatype="email" label="Email(s)" isrequired></vr-textbox-multiple>
-                </vr-columns>
-            </vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-textbox-multiple value="scopeModel.toMail" datatype="email" label="Email(s)" isrequired></vr-textbox-multiple>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+                <vr-tab header="'Contacts'" tabobject="scopeModel.contactTabObject">
+                    <vr-section title="{{c.label}} Contact" ng-repeat="c in scopeModel.contacts">
+                        <vr-columns width="1/2row">
+                            <vr-label>Contact Name </vr-label>
+                            <vr-textbox value="c.name" type="text"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-label>Title</vr-label>
+                            <vr-textbox value="c.title" type="text"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-label>Email</vr-label>
+                            <vr-textbox value="c.email" type="email"></vr-textbox>
+                        </vr-columns>
+                    </vr-section>
+                </vr-tab>
+            </vr-tabs>
+
+
         </vr-form>
     </vr-modalbody>
     <div>
