--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ActivatePasswordEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ActivatePasswordEditor.html
@@ -1,7 +1,8 @@
 ﻿<div vr-modalcontent ng-controller="VR_Sec_ActivatePasswordEditorController" vr-loader="isLoading">
-    <vr-modalbody>
+    <vr-form name="formResetPasswordEditor" submitname="activatepassword">
 
-        <vr-form name="formResetPasswordEditor">
+        <vr-modalbody>
+
             <vr-validation-group validationcontext="SaveGroup">
                 <vr-validator validate="validatePasswords()">
                     <vr-row>
@@ -11,7 +12,7 @@
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox label="New Password" type="password" value="password" isrequired="true" hint="{{passwordHint}}" largehint></vr-textbox>
+                            <vr-textbox label="New Password" type="password" value="password" isrequired="true" hint="{{passwordHint}}" largehint setfocus></vr-textbox>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-textbox label="Confirm Password" type="password" value="confirmedPassword" isrequired="true"></vr-textbox>
@@ -19,15 +20,15 @@
                     </vr-row>
                 </vr-validator>
             </vr-validation-group>
-        </vr-form>
+        </vr-modalbody>
+        <div>
+            <vr-actionbar showcollapsebutton="false" issectioncollapsed="false" formsubmitsection>
+                <div transclude-to="buttons">
+                    <vr-button type="Save" data-onclick="save" name="formResetPasswordEditor" validationcontext="SaveGroup" submitname="activatepassword"></vr-button>
+                    <vr-button type="Close" data-onclick="close"></vr-button>
+                </div>
+            </vr-actionbar>
+        </div>
+    </vr-form>
 
-    </vr-modalbody>
-    <div>
-        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
-            <div transclude-to="buttons">
-                <vr-button type="Save" data-onclick="save" name="formResetPasswordEditor" validationcontext="SaveGroup"></vr-button>
-                <vr-button type="Close" data-onclick="close"></vr-button>
-            </div>
-        </vr-actionbar>
-    </div>
 </div>
