--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
@@ -5,12 +5,12 @@
             <vr-form name="formLogin" submitname="login">
                 <div class="row login-spacer">
                     <div class="col-xs-8 col-xs-offset-2 col-md-8 col-md-offset-2">
-                        <vr-textbox value="email" placeholder="Username" type="email" isrequired></vr-textbox>
+                        <vr-textbox value="email" placeholder="Username" type="email" isrequired setfocus></vr-textbox>
                     </div>
                 </div>
                 <div class="row login-spacer">
                     <div class="col-xs-8 col-xs-offset-2 col-md-8 col-md-offset-2">
-                        <vr-textbox value="password" placeholder="Password" type="password" isrequired></vr-textbox>
+                        <vr-textbox value="password" placeholder="Password" type="password" isrequired ></vr-textbox>
                     </div>
                 </div>
                 <div class="row login-spacer">
