--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ChangePassword.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ChangePassword.html
@@ -3,7 +3,7 @@
         <vr-form name="formChangePassword">
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-textbox value="oldPassword" label="Current Password" type="password" isrequired="true"></vr-textbox>
+                    <vr-textbox value="oldPassword" label="Current Password" type="password" isrequired="true" setfocus></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-validation-group validationcontext="SaveGroup">
