Remove hideremoveicon to allow user to unselect customer
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43617

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
@@ -7,7 +7,7 @@
                                                    selectedvalues="selectedCustomer"
                                                    onselectionchanged="onCarrierAccountChanged"
                                                    getcustomers
-                                                   hideremoveicon isrequired="isRequiredCarrierAccountSelector">
+                                                   isrequired="isRequiredCarrierAccountSelector">
 
                 </vr-whs-be-carrieraccount-selector>
                 <vr-columns width="normal">
