adjust CurrentRate filter position
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43634

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -77,7 +77,7 @@
                                                 <span ng-show="columnsConfig.currentRate.sortDirection=='ASC'">&uarr;</span>
                                                 <span ng-show="columnsConfig.currentRate.sortDirection=='DESC'">&darr;</span>
                                                 <span>C.Rate</span>
-                                                <i style="font-size: 6px;float: right;" ng-show="currentRateFilterValue != undefined " class="glyphicon glyphicon-filter hand-cursor " ng-click="$event.stopPropagation(); currentRateFilterValue = undefined ; filterZones()"></i>
+                                                <i style="font-size: 6px;float: left;" ng-show="currentRateFilterValue != undefined " class="glyphicon glyphicon-filter hand-cursor " ng-click="$event.stopPropagation(); currentRateFilterValue = undefined ; filterZones()"></i>
 
                                             </div>
                                             <div ng-show="showfilter">
