--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
@@ -2,11 +2,10 @@
     <vr-columns width="1/2row">
         <vr-label ng-if="ctrl.showDefaultRate">Default Rate ({{ctrl.systemCurrencySymbol}})</vr-label>
         <vr-textbox value="ctrl.defaultRate" type="number" minvalue="0"
-                    decimalprecision="8" 
+                    decimalprecision="8"
                     ng-if="ctrl.showDefaultRate"
                     isrequired="ctrl.isDefaultRateRequired"></vr-textbox>
     </vr-columns>
-
     <vr-columns width="1/2row">
         <vr-textbox label="Max Sale Rate ({{ctrl.systemCurrencySymbol}})"
                     value="ctrl.maximumRate" minvalue="0" type="number"
@@ -14,44 +13,52 @@
                     isrequired="ctrl.isMaxSaleRateRequired"></vr-textbox>
     </vr-columns>
 </vr-row>
-
 <vr-row>
-    <vr-columns width="1/2row">
-        <vr-textbox label="Numbering Plan Day Offset" type="number"
-                    value="ctrl.effectiveDateDayOffset" minvalue="0"
-                    ng-if="ctrl.showEffectiveDateDayOffset"
-                    isrequired="ctrl.isEffectiveDateDayOffset"></vr-textbox>
-    </vr-columns>
-
-    <vr-columns width="1/2row">
-        <vr-textbox label="Retroactive Day Offset" type="number"
-                    value="ctrl.retroactiveDayOffset" minvalue="0"
-                    ng-if="ctrl.showRetroactiveDayOffset"
-                    isrequired="ctrl.isRetroactiveDayOffset"></vr-textbox>
+    <vr-columns width="fullrow">
+        <vr-section title="Day Offsets">
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Numbering Plan" type="number"
+                                value="ctrl.effectiveDateDayOffset" minvalue="0"
+                                ng-if="ctrl.showEffectiveDateDayOffset"
+                                isrequired="ctrl.isEffectiveDateDayOffset"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Retroactive" type="number"
+                                value="ctrl.retroactiveDayOffset" minvalue="0"
+                                ng-if="ctrl.showRetroactiveDayOffset"
+                                isrequired="ctrl.isRetroactiveDayOffset"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Sell Country" type="number"
+                                value="ctrl.newRateDayOffset" minvalue="0"
+                                ng-if="ctrl.showNewRateDayOffset"
+                                isrequired="ctrl.isNewRateDayOffset"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox ng-if="ctrl.showEndCountryDayOffset"
+                                label="End Country"
+                                type="number"
+                                value="ctrl.endCountryDayOffset"
+                                minvalue="0"
+                                isrequired="ctrl.isEndCountryDayOffsetRequired">
+                    </vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Increased Rate" type="number"
+                                value="ctrl.increasedRateDayOffset" minvalue="0"
+                                ng-if="ctrl.showIncreasedRateDayOffset"
+                                isrequired="ctrl.isIncreasedRateDayOffset"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Decreased Rate" type="number"
+                                value="ctrl.decreasedRateDayOffset" minvalue="0"
+                                ng-if="ctrl.showDecreasedRateDayOffset"
+                                isrequired="ctrl.isDecreasedRateDayOffset"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
     </vr-columns>
 </vr-row>
-
-<vr-row>
-    <vr-columns width="1/2row">
-        <vr-textbox label="New Rate Day Offset" type="number"
-                    value="ctrl.newRateDayOffset" minvalue="0"
-                    ng-if="ctrl.showNewRateDayOffset"
-                    isrequired="ctrl.isNewRateDayOffset"></vr-textbox>
-    </vr-columns>
-
-    <vr-columns width="1/2row">
-        <vr-textbox label="Increased Rate Day Offset" type="number"
-                    value="ctrl.increasedRateDayOffset" minvalue="0"
-                    ng-if="ctrl.showIncreasedRateDayOffset"
-                    isrequired="ctrl.isIncreasedRateDayOffset"></vr-textbox>
-    </vr-columns>
-    
-    <vr-columns width="1/2row">
-        <vr-textbox label="Decreased Rate Day Offset" type="number"
-                    value="ctrl.decreasedRateDayOffset" minvalue="0"
-                    ng-if="ctrl.showDecreasedRateDayOffset"
-                    isrequired="ctrl.isDecreasedRateDayOffset"></vr-textbox>
-    </vr-columns>
-</vr-row>
-
-
