--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
@@ -8,7 +8,7 @@
     <vr-datagridcolumn headertext="'Services'" fixedwidth="100" disablesorting>
         <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
-    <vr-datagridcolumn fixedwidth="25">
+    <vr-datagridcolumn fixedwidth="25" headertext="'Source'" invisibleheader>
         <vr-icon icontype="dataItem.iconType"></vr-icon>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Datetime'"></vr-datagridcolumn>
